<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large"
    tools:context=".view.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/a_forgot_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_xlarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/a_forgot_password_tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/forgot_password_message"
            android:textColor="@color/app_text_color_light"
            android:textSize="@dimen/font_size_small" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/a_forgot_password_username"
            style="@style/CustomEditTextTheme"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/email"
            android:transitionName="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/a_forgot_password_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/app_text_color_dark"
                android:textSize="@dimen/font_size_small" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/a_forgot_password_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:includeFontPadding="false"
            android:text="@string/forgot_password_send"
            android:transitionName="@string/forgot_password_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_message" />

        <TextView
            android:id="@+id/a_forgot_password_tv_success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/forgot_password_success_message"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_small"
            android:visibility="gone"/>
    </LinearLayout>

    <com.nhs.view.fragment.ContentLoadingView
        android:id="@+id/a_base_v_content_loading_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible" />

</RelativeLayout>