<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.SignUpActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_icon"
        android:transitionName="app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titilliumweb_bold"
        android:includeFontPadding="false"
        android:text="@string/welcome"
        android:textColor="#000"
        android:textSize="@dimen/font_size_large"
        android:transitionName="@string/welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image" />

    <TextView
        android:id="@+id/sign_in_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titilliumweb_semibold"
        android:includeFontPadding="false"
        android:text="@string/signup_to_start_your_new_journey"
        android:textSize="@dimen/font_size_medium"
        android:transitionName="@string/signup_to_start_your_new_journey"
        app:layout_constraintStart_toStartOf="@+id/welcome_message"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullName"
        style="@style/CustomEditTextTheme"
        android:hint="@string/full_name"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_signup_edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_small"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/CustomEditTextTheme"
        android:hint="@string/email_id"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_signup_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_small"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/CustomEditTextTheme"
        android:hint="@string/password"
        android:transitionName="@string/password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_signup_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_small"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        style="@style/CustomEditTextTheme"
        android:hint="@string/confirm_password"
        android:transitionName="@string/password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/a_signup_edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/app_text_color_dark"
            android:textSize="@dimen/font_size_small"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/a_signup_btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/sign_up"
        android:transitionName="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/alreadyHaveAccount"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/already_have_an_account_login"
        android:transitionName="sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.nhs.view.fragment.ContentLoadingView
        android:id="@+id/a_base_v_content_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>